// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.BlockLayout.Text props testing checkGrammar 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkGrammar 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkGrammar 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkGrammar 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkHighlight 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkHighlight 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkHighlight 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkHighlight 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkSpaces 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkSpaces 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkSpaces 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkSpaces 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing className 1`] = `
<span
  className="uublocklayout-1mchdn4 my-classname uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 1`] = `
<span
  className="color-schema-default uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 2`] = `
<span
  className="color-schema-red uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 3`] = `
<span
  className="color-schema-red uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 4`] = `
<span
  className="color-schema-red-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 5`] = `
<span
  className="color-schema-red-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 6`] = `
<span
  className="color-schema-green uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 7`] = `
<span
  className="color-schema-green uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 8`] = `
<span
  className="color-schema-green-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 9`] = `
<span
  className="color-schema-green-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 10`] = `
<span
  className="color-schema-yellow uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 11`] = `
<span
  className="color-schema-yellow uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 12`] = `
<span
  className="color-schema-yellow-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 13`] = `
<span
  className="color-schema-yellow-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 14`] = `
<span
  className="color-schema-purple uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 15`] = `
<span
  className="color-schema-purple uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 16`] = `
<span
  className="color-schema-purple-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 17`] = `
<span
  className="color-schema-purple-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 18`] = `
<span
  className="color-schema-brown uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 19`] = `
<span
  className="color-schema-brown uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 20`] = `
<span
  className="color-schema-brown-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 21`] = `
<span
  className="color-schema-brown-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 22`] = `
<span
  className="color-schema-orange uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 23`] = `
<span
  className="color-schema-orange uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 24`] = `
<span
  className="color-schema-orange-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 25`] = `
<span
  className="color-schema-orange-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 26`] = `
<span
  className="color-schema-cyan uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 27`] = `
<span
  className="color-schema-cyan uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 28`] = `
<span
  className="color-schema-cyan-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 29`] = `
<span
  className="color-schema-cyan-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 30`] = `
<span
  className="color-schema-grey uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 31`] = `
<span
  className="color-schema-grey uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 32`] = `
<span
  className="color-schema-grey-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 33`] = `
<span
  className="color-schema-grey-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 34`] = `
<span
  className="color-schema-pink uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 35`] = `
<span
  className="color-schema-pink uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 36`] = `
<span
  className="color-schema-pink-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 37`] = `
<span
  className="color-schema-pink-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema 38`] = `
<span
  className="color-schema-pink uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing content 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</span>
`;

exports[`UU5.BlockLayout.Text props testing content 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing content 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing content 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</span>
`;

exports[`UU5.BlockLayout.Text props testing controlled 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing controlled 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing controlled 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing controlled 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing default props 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing disabled 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-disabled uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing disabled 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing disabled 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing disabled 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-disabled uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing dynamic 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing dynamic 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing dynamic 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing dynamic 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing hidden 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-hidden uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing hidden 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing hidden 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing hidden 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-hidden uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className="uublocklayout-35do5y"
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon="mdi-phone"
    id={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className="uublocklayout-35do5y"
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon="mdi-phone"
    id={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className="uublocklayout-35do5y"
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon="mdi-email"
    id={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon 5`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className="uublocklayout-35do5y"
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon="mdi-email"
    id={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon 6`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className="uublocklayout-35do5y"
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon="mdi-phone"
    id={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing id 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="myId"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing ignoreHTML 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing ignoreHTML 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing ignoreHTML 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing ignoreHTML 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing mainAttrs 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing name 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 5`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 6`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 7`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 8`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 9`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 10`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 11`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 12`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 13`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 14`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 15`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 16`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 17`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 18`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 19`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel 20`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing noIndex 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-noindex uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing noIndex 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing noIndex 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing noIndex 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-noindex uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing pureRender 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing pureRender 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing pureRender 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing pureRender 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing selected 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-selected uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing selected 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing selected 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing selected 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-selected uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing size 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing size 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv uublocklayout-blivtv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing size 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv uublocklayout-blivtv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing size 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing style 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing style 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing style 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing style 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing textCorrector 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    checkHighlight={true}
    checkSpaces={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing textCorrector 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    checkHighlight={false}
    checkSpaces={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing textCorrector 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    checkHighlight={false}
    checkSpaces={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing textCorrector 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    checkHighlight={true}
    checkSpaces={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing tooltip 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-13g30pv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight 2`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-2jm5tz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight 3`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-2jm5tz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight 4`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ju54tg"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight 5`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ju54tg"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight 6`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-2jm5tz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;
